26-aws-eks-project-deploy/kubernetes/node/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: backend
          image: uday0710/node-backend:05
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
            limits:
              cpu: "500m"
