26-aws-eks-project-deploy/kubernetes/node/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  type: NodePort
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
