26-aws-eks-project-deploy/kubernetes/node/network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
      - podSelector:
            matchLabels:
              app: node
      ports:
        - port: 3306
          protocol: TCP
